1.5/_sources/modules/generated/sklearn.multiclass.OneVsRestClassifier.rst.txt
OneVsRestClassifier
===================

.. currentmodule:: sklearn.multiclass

.. autoclass:: OneVsRestClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multiclass.OneVsRestClassifier sklearn.multiclass.OneVsRestClassifier.__init__ sklearn.multiclass.OneVsRestClassifier.decision_function sklearn.multiclass.OneVsRestClassifier.fit sklearn.multiclass.OneVsRestClassifier.get_metadata_routing sklearn.multiclass.OneVsRestClassifier.get_params sklearn.multiclass.OneVsRestClassifier.partial_fit sklearn.multiclass.OneVsRestClassifier.predict sklearn.multiclass.OneVsRestClassifier.predict_proba sklearn.multiclass.OneVsRestClassifier.score sklearn.multiclass.OneVsRestClassifier.set_params sklearn.multiclass.OneVsRestClassifier.set_partial_fit_request sklearn.multiclass.OneVsRestClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -