1.7/_sources/modules/generated/sklearn.multiclass.OneVsRestClassifier.rst.txt
OneVsRestClassifier
===================

.. currentmodule:: sklearn.multiclass

.. autoclass:: OneVsRestClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multiclass.OneVsRestClassifier sklearn.multiclass.OneVsRestClassifier.__delattr__ sklearn.multiclass.OneVsRestClassifier.__dir__ sklearn.multiclass.OneVsRestClassifier.__eq__ sklearn.multiclass.OneVsRestClassifier.__format__ sklearn.multiclass.OneVsRestClassifier.__ge__ sklearn.multiclass.OneVsRestClassifier.__getattribute__ sklearn.multiclass.OneVsRestClassifier.__getstate__ sklearn.multiclass.OneVsRestClassifier.__gt__ sklearn.multiclass.OneVsRestClassifier.__hash__ sklearn.multiclass.OneVsRestClassifier.__init__ sklearn.multiclass.OneVsRestClassifier.__init_subclass__ sklearn.multiclass.OneVsRestClassifier.__le__ sklearn.multiclass.OneVsRestClassifier.__lt__ sklearn.multiclass.OneVsRestClassifier.__ne__ sklearn.multiclass.OneVsRestClassifier.__new__ sklearn.multiclass.OneVsRestClassifier.__reduce__ sklearn.multiclass.OneVsRestClassifier.__reduce_ex__ sklearn.multiclass.OneVsRestClassifier.__repr__ sklearn.multiclass.OneVsRestClassifier.__setattr__ sklearn.multiclass.OneVsRestClassifier.__setstate__ sklearn.multiclass.OneVsRestClassifier.__sizeof__ sklearn.multiclass.OneVsRestClassifier.__sklearn_clone__ sklearn.multiclass.OneVsRestClassifier.__sklearn_tags__ sklearn.multiclass.OneVsRestClassifier.__str__ sklearn.multiclass.OneVsRestClassifier.__subclasshook__ sklearn.multiclass.OneVsRestClassifier._build_request_for_signature sklearn.multiclass.OneVsRestClassifier._get_default_requests sklearn.multiclass.OneVsRestClassifier._get_doc_link sklearn.multiclass.OneVsRestClassifier._get_metadata_request sklearn.multiclass.OneVsRestClassifier._get_param_names sklearn.multiclass.OneVsRestClassifier._get_params_html sklearn.multiclass.OneVsRestClassifier._html_repr sklearn.multiclass.OneVsRestClassifier._repr_html_inner sklearn.multiclass.OneVsRestClassifier._repr_mimebundle_ sklearn.multiclass.OneVsRestClassifier._validate_params sklearn.multiclass.OneVsRestClassifier.decision_function sklearn.multiclass.OneVsRestClassifier.fit sklearn.multiclass.OneVsRestClassifier.get_metadata_routing sklearn.multiclass.OneVsRestClassifier.get_params sklearn.multiclass.OneVsRestClassifier.partial_fit sklearn.multiclass.OneVsRestClassifier.predict sklearn.multiclass.OneVsRestClassifier.predict_proba sklearn.multiclass.OneVsRestClassifier.score sklearn.multiclass.OneVsRestClassifier.set_params sklearn.multiclass.OneVsRestClassifier.set_partial_fit_request sklearn.multiclass.OneVsRestClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -